added exercise categories

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">unfitnotes1</string>
     <string name="DEFAULTWORK">NO WORKOUT HERE</string>
+    <string name="default_noWorkout">Workout Log Empty\nYOU ARE GAY</string>
 </resources>
